--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
                         <div class="header__nav-btns">
                             <a href="#" class="header__list-btn">Заказать звонок</a>
+                            <a href="#" class="burger__list-btn">Заказать звонок</a>
                             <div class="nav__burger">
                                 <div class="burger__menu">
                                     <span class="menu__top"></span>
@@ -300,106 +301,104 @@
                             <a href="#"><img class="youtube__red" src="images/youtube__play.png" alt=""></a>
                         </div>
                     </div>
-                    <div class="main__changes-right">
-                        <div class="changes__right-top">
-                            <div class="top__left">
-                                <h3 class="top__left-title">ПРОБЛЕМА</h3>
-                                <div class="top__left-description">
-                                    <i class="icon-plus-circle1 mr"></i>
-                                    <p class="top__left-desc">Гинекологические проблемы КРС</p>
-                                </div>
-                                <div class="top__left-description">
-                                    <i class="icon-plus-circle1 mr"></i>
-                                    <p class="top__left-desc">Низкая поедаемость корма</p>
-                                </div>
-                                <div class="top__left-description">
-                                    <i class="icon-plus-circle1 mr"></i>
-                                    <p class="top__left-desc">Низкая поедаемость корма</p>
-                                </div>
+                    <div class="changes__right-top">
+                        <div class="top__left">
+                            <h3 class="top__left-title">ПРОБЛЕМА</h3>
+                            <div class="top__left-description">
+                                <i class="icon-plus-circle1 mr"></i>
+                                <p class="top__left-desc">Гинекологические проблемы КРС</p>
                             </div>
-                            <div class="top__right">
-                                <h3 class="top__right-title">ОСНОВНОЕ РЕШЕНИЕ:</h3>
-                                <div class="top__right-description">
-                                    <i class="icon-check-circle1 mx"></i>
-                                    <p class="top__right-desc">Ввод адсорбента микотоксинов в рацион</p>
+                            <div class="top__left-description">
+                                <i class="icon-plus-circle1 mr"></i>
+                                <p class="top__left-desc">Низкая поедаемость корма</p>
+                            </div>
+                            <div class="top__left-description">
+                                <i class="icon-plus-circle1 mr"></i>
+                                <p class="top__left-desc">Низкая поедаемость корма</p>
+                            </div>
+                        </div>
+                        <div class="top__right">
+                            <h3 class="top__right-title">ОСНОВНОЕ РЕШЕНИЕ:</h3>
+                            <div class="top__right-description">
+                                <i class="icon-check-circle1 mx"></i>
+                                <p class="top__right-desc">Ввод адсорбента микотоксинов в рацион</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="changes__right-bottom">
+                        <div class="bottom__left">
+                            <h3 class="bottom__left-title">Привес в месяц</h3>
+                            <div class="skills">
+                                <div class="bottom__left-text">
+                                    <span class="text__left-red">Было</span>
+                                    <span class="text__right">0,8 - 0,9 кг</span>
+                                </div>
+                                <div class="skill">
+                                    <div class="skill_bar">
+                                        <div class="skill_per" per="43"></div>
+                                    </div>
+                                </div>
+
+                                <div class="bottom__left-text">
+                                    <span class="text__left-green">Стало</span>
+                                    <span class="text__right">1,2 - 1,7 кг</span>
+                                </div>
+                                <div class="skill">
+                                    <div class="skill_bar">
+                                        <div class="skill_per gradient" per="92">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="changes__right-bottom">
-                            <div class="bottom__left">
-                                <h3 class="bottom__left-title">Привес в месяц</h3>
-                                <div class="skills">
-                                    <div class="bottom__left-text">
-                                        <span class="text__left-red">Было</span>
-                                        <span class="text__right">0,8 - 0,9 кг</span>
-                                    </div>
-                                    <div class="skill">
-                                        <div class="skill_bar">
-                                            <div class="skill_per" per="43"></div>
-                                        </div>
-                                    </div>
 
-                                    <div class="bottom__left-text">
-                                        <span class="text__left-green">Стало</span>
-                                        <span class="text__right">1,2 - 1,7 кг</span>
+                        <div class="bottom__center">
+                            <h3 class="bottom__left-title">Гипофункция</h3>
+
+                            <div class="skills">
+                                <div class="bottom__left-text">
+                                    <span class="text__left-red">Было</span>
+                                    <span class="text__right">17%</span>
+                                </div>
+                                <div class="skill">
+                                    <div class="skill_bar">
+                                        <div class="skill_per" per="43"></div>
                                     </div>
-                                    <div class="skill">
-                                        <div class="skill_bar">
-                                            <div class="skill_per gradient" per="92">
-                                            </div>
+                                </div>
+
+                                <div class="bottom__left-text">
+                                    <span class="text__left-green">Стало</span>
+                                    <span class="text__right">2-3%</span>
+                                </div>
+                                <div class="skill">
+                                    <div class="skill_bar">
+                                        <div class="skill_per gradient" per="0">
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="bottom__center">
-                                <h3 class="bottom__left-title">Гипофункция</h3>
-
-                                <div class="skills">
-                                    <div class="bottom__left-text">
-                                        <span class="text__left-red">Было</span>
-                                        <span class="text__right">17%</span>
-                                    </div>
-                                    <div class="skill">
-                                        <div class="skill_bar">
-                                            <div class="skill_per" per="43"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="bottom__left-text">
-                                        <span class="text__left-green">Стало</span>
-                                        <span class="text__right">2-3%</span>
-                                    </div>
-                                    <div class="skill">
-                                        <div class="skill_bar">
-                                            <div class="skill_per gradient" per="0">
-                                            </div>
-                                        </div>
+                        <div class="bottom__right">
+                            <h3 class="bottom__left-title">Токсическая дистрофия печени</h3>
+                            <div class="skills">
+                                <div class="bottom__left-text">
+                                    <span class="text__left-red">Было</span>
+                                    <span class="text__right">0,8 - 0,9 кг</span>
+                                </div>
+                                <div class="skill">
+                                    <div class="skill_bar">
+                                        <div class="skill_per" per="79"></div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="bottom__right">
-                                <h3 class="bottom__left-title">Токсическая дистрофия печени</h3>
-                                <div class="skills">
-                                    <div class="bottom__left-text">
-                                        <span class="text__left-red">Было</span>
-                                        <span class="text__right">0,8 - 0,9 кг</span>
-                                    </div>
-                                    <div class="skill">
-                                        <div class="skill_bar">
-                                            <div class="skill_per" per="79"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="bottom__left-text">
-                                        <span class="text__left-green">Стало</span>
-                                        <span class="text__right">1,2 - 1,7 кг</span>
-                                    </div>
-                                    <div class="skill">
-                                        <div class="skill_bar">
-                                            <div class="skill_per gradient" per="27">
-                                            </div>
+                                <div class="bottom__left-text">
+                                    <span class="text__left-green">Стало</span>
+                                    <span class="text__right">1,2 - 1,7 кг</span>
+                                </div>
+                                <div class="skill">
+                                    <div class="skill_bar">
+                                        <div class="skill_per gradient" per="27">
                                         </div>
                                     </div>
                                 </div>
@@ -433,8 +432,8 @@
         </section>
         <section>
             <div class="container">
-                <h2 class="main__title">завод «кормовые смеси»</h2>
-                <p class="main__description">Крупный производитель кормовых добавок с 1999 года</p>
+                <h2 class="main__title factory__name">завод «кормовые смеси»</h2>
+                <p class="main__description tr-right">Крупный производитель кормовых добавок с 1999 года</p>
                 <div class="main__factory">
                     <div class="factory__info"></div>
                     <div class="factory__info-cards">
@@ -479,10 +478,10 @@
         <section>
             <div class="container">
                 <div class="main__documents">
-                    <img src="images/certificate__img1.png" alt="" class="main__document">
-                    <img src="images/certificate__img2.png" alt="" class="main__document">
-                    <img src="images/certificate__img3.png" alt="" class="main__document">
-                    <img src="images/certificate__img4.png" alt="" class="main__document">
+                    <a href="#" class="main__document fal"><img src="images/certificate__img1.png" alt=""></a>
+                    <a href="#" class="main__document fal"><img src="images/certificate__img2.png" alt=""></a>
+                    <a href="#" class="main__document fal"><img src="images/certificate__img3.png" alt=""></a>
+                    <a href="#" class="main__document fal"><img src="images/certificate__img4.png" alt=""></a>
                 </div>
                 <img src="images/certificate__before.png" alt="" class="main__document-before">
                 <p class="main__documents-desc">Мы всегда открыты для наших партнеров, и готовы предоставить оригиналы всех документов.</p>
@@ -630,6 +629,10 @@
                         <div class="partners__card12">
                             <h2>ZMT GROUP</h2>
                         </div>
+                    </div>
+                    <div class="sliders__icons">
+                        <i class="fal fa-arrow-circle-left slider__prev"></i>
+                        <i class="fal fa-arrow-circle-right slider__next"></i>
                     </div>
                 </div>
             </div>
@@ -1034,11 +1037,11 @@
             <!--accordeon end-->
             <h3>Получите расчет стоимости под вашу задачу</h3>
             <p class="order__desc">Напишите свои контакты и мы свяжемся с вами в течение 24 часов для уточнения деталей, после чего отправим КП с лучшими условиями.</p>
-            <form action="" class="input__text">
+            <form action="" class="input__text order__text">
                 <input type="text" placeholder="Имя">
                 <input type="email" placeholder="E-mail">
             </form>
-            <form action="" class="input__number">
+            <form action="" class="input__number order__number">
                 <input type="number" placeholder="Телефон">
                 <a href="#" class="order__btn">Заказать звонок</a>
             </form>
