--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Завод Кормовые Смеси</title>
-    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/style.css">
@@ -630,10 +629,7 @@
                             <h2>ZMT GROUP</h2>
                         </div>
                     </div>
-                    <div class="sliders__icons">
-                        <i class="fal fa-arrow-circle-left slider__prev"></i>
-                        <i class="fal fa-arrow-circle-right slider__next"></i>
-                    </div>
+
                 </div>
             </div>
         </section>
@@ -761,41 +757,36 @@
             <h2 class="main__news-title">новости компании</h2>
             <div class="main__news">
                 <div class="container">
-                    <div class="actual__news">
+                    <div class="actual__news slider">
                         <p class="main__description news__desc">Актуальные статьи, информация, отзывы в нашем блоге</p>
-                        <div class="actual__news-cards slideshow ">
-                            <div class="actual__news-card mySlides fade ">
+                        <div class="actual__news-cards slider__line">
+                            <div class="actual__news-card">
                                 <img src="images/news__card-img1.png" alt="">
                                 <h2 class="actual__news-title">Новые продукты для животноводства</h2>
                                 <p class="actual__news-desc">Свердловская область вошла в десятку субьектов РФ по производству</p>
                             </div>
-                            <div class="actual__news-card mySlides fade ">
+                            <div class="actual__news-card">
                                 <img src="images/news__card-img2.png" alt="">
                                 <h2 class="actual__news-title">Новые продукты для животноводства</h2>
                                 <p class="actual__news-desc">Свердловская область вошла в десятку субьектов РФ по производству</p>
                             </div>
-                            <div class="actual__news-card mySlides fade ">
+                            <div class="actual__news-card">
                                 <img src="images/news__card-img3.png" alt="">
                                 <h2 class="actual__news-title">Новые продукты для животноводства</h2>
                                 <p class="actual__news-desc">Свердловская область вошла в десятку субьектов РФ по производству</p>
                             </div>
-                            <div class="actual__news-card mySlides fade ">
+                            <div class="actual__news-card">
                                 <img src="images/news__card-img4.png" alt="">
                                 <h2 class="actual__news-title">Новые продукты для животноводства</h2>
                                 <p class="actual__news-desc">Свердловская область вошла в десятку субьектов РФ по производству</p>
                             </div>
-                            <a class="prev " onclick="plusSlides(-1) ">&#10094;</a>
-                            <a class="next " onclick="plusSlides(1) ">&#10095;</a>
                         </div>
                         <a href="#" class="read__news-btn input__form-btn">Читать в блоге</a>
                     </div>
+                    <button class="slider__prev">&#8592;</button>
+                    <button class="slider__next">&#8594;</button>
                 </div>
-                <div style="text-align:center">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                </div>
+
             </div>
         </section>
 
