--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <title>Завод Кормовые Смеси</title>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/style.css">
@@ -629,8 +630,9 @@
                             <h2>ZMT GROUP</h2>
                         </div>
                     </div>
-
                 </div>
+                <a class="partners__slider-prev"><i class="fal fa-arrow-left"></i></a>
+                <a class="partners__slider-next"><i class="fal fa-arrow-right"></i></a>
             </div>
         </section>
         <section>
@@ -744,9 +746,9 @@
                             <p>Или свяжитесь самостоятельно:</p>
                             <img src="images/providers__after.png" alt="">
                         </div>
-                        <div class="main__connection-btns">
-                            <a href="tel:+7 (343) 363 05 69" class="connection__tel"><i class="fas fa-phone-alt color__orange"></i>+7 (343) 363 05 69</a>
-                            <a href="mailto:ЗКС@зкс.рф" class="connection__mail"><i class="fas fa-envelope color__orange"></i>ЗКС@зкс.рф</a>
+                        <div class="main__connection-btns suppliers__connections">
+                            <a href="tel:+7 (343) 363 05 69" class="connection__tel suppliers__tel"><i class="fas fa-phone-alt color__orange"></i>+7 (343) 363 05 69</a>
+                            <a href="mailto:ЗКС@зкс.рф" class="connection__mail suppliers__mail"><i class="fas fa-envelope color__orange"></i>ЗКС@зкс.рф</a>
                         </div>
                     </div>
 
